--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   <!-- Naver Web Mater Verification -->
   <meta name="naver-site-verification" content="6bc58c2f3e8161fe8df6acec8c1529ccff8c7495" />
 
+  <!-- Font Awesome Icons -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Gothic+A1|Merriweather+Sans:400,700|Merriweather:400,300,300italic,400italic,700,700italic&display=swap"
@@ -78,7 +81,8 @@
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/aos.css">
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/native-toast.min.css">
+  <link href="css/native-toast.min.css" rel="stylesheet">
+  <link href="css/freezeframe_styles.min" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -137,12 +141,12 @@
 
           <div id="download-button" style="display: none">
             <a href="ms-windows-store://pdp/?productid=9N798V33QDF8">
-              <img class="img-fluid mt-4" width="177px" src="img/store.png" alt="다운로드 버튼"></a>
+              <img class="img-fluid mt-4" width="200px" src="img/store.png" alt="다운로드 버튼"></a>
           </div>
 
           <div id="share-button" style="display: none">
             <a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span>기억해 두기</span></a>
-            <p>윈도우10 전용</p>
+            <p><b>윈도우10 전용</b></p>
             <p>다음에 사용해 보세요..</p>
           </div>
         </div>
@@ -166,14 +170,12 @@
 
   <!-- Features Section -->
   <section id="features">
-    <div class="container-fluid features-section bg-white mb-0">
+    <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1">
-          <img
-            src="https://1.bp.blogspot.com/-AGZolX0dOPg/Xd7RZR2XTLI/AAAAAAAAHUU/2f5fEEi0scAJELA5Ya-pAiUBIme5teFbwCLcBGAsYHQ/s1600/1.png"
-            alt="특허 검색 화면" width="100%">
+          <img src="img/features/1.gif" alt="특허 검색 화면" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 p-md-5 mt-md-3 mt-lg-5 order-1 order-md-2">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
           <h2><span class="divider-v">|</span> 직관성</h2>
           <div class="d-none d-md-block">
             <p>모든 단어를 태그처리</p>
@@ -182,7 +184,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 p-md-5 mt-md-3 mt-lg-5 order-3 text-right">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right">
           <h2>동의어 사전 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>추가된 단어 자동저장</p>
@@ -191,17 +193,13 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4">
-          <img
-            src="https://1.bp.blogspot.com/-AGZolX0dOPg/Xd7RZR2XTLI/AAAAAAAAHUU/2f5fEEi0scAJELA5Ya-pAiUBIme5teFbwCLcBGAsYHQ/s1600/1.png"
-            alt="특허 검색 화면" width="100%">
+          <img src="img/features/2.gif" alt="특허 동의어 사전" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5">
-          <img
-            src="https://1.bp.blogspot.com/-AGZolX0dOPg/Xd7RZR2XTLI/AAAAAAAAHUU/2f5fEEi0scAJELA5Ya-pAiUBIme5teFbwCLcBGAsYHQ/s1600/1.png"
-            alt="특허 검색 화면" width="100%">
+          <img src="img/features/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 p-md-5 mt-md-3 mt-lg-5 order-5 order-md-6">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
           <div class="d-none d-md-block">
             <p>키프리스, Google Patents,</p>
@@ -210,7 +208,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 p-md-5 mt-md-3 mt-lg-5 order-7 text-right">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right">
           <h2>검색기록 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>검색식이 자동 저장</p>
@@ -218,10 +216,8 @@
             <p>복구기능 지원</p>
           </div>
         </div>
-        <div class="col-12 col-md-8 text-center order-8">
-          <img
-            src="https://1.bp.blogspot.com/-AGZolX0dOPg/Xd7RZR2XTLI/AAAAAAAAHUU/2f5fEEi0scAJELA5Ya-pAiUBIme5teFbwCLcBGAsYHQ/s1600/1.png"
-            alt="특허 검색 화면" width="100%">
+        <div class="col-12 col-md-8 p-3 text-center order-8 mb-0">
+          <img src="img/features/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
         </div>
       </div>
     </div>
@@ -229,7 +225,7 @@
 
   <!-- Blog Section -->
   <section class="py-5 bg-light mt-0" id="blog">
-    <div class="container-fluid page-section" data-aos="fade-up" data-aos-duration="800">
+    <div class="container" data-aos="fade-up" data-aos-duration="800">
       <h2 class="text-center mt-0">블로그</h2>
       <hr class="divider my-4 pb-2">
       <div class="row no-gutters">
@@ -449,13 +445,11 @@
   <!--<script src="js/grt-youtube-popup.min.js"></script>-->
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.popupimg.min.js"></script>
   <script src="js/native-toast.min.js"></script>
+  <script src="js/freezeframe.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>
