--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1">
-          <img src="img/features/1.gif" alt="특허 검색 화면" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-QainkvNFTfE/XfoBAvqRJqI/AAAAAAAAHis/xHuiwSl-l3Y2Pd4y0KeI6EAXIzGHW1jqgCLcBGAsYHQ/s1600/1.gif" alt="특허 검색 화면" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
           <h2><span class="divider-v">|</span> 직관성</h2>
@@ -193,11 +193,11 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4">
-          <img src="img/features/2.gif" alt="특허 동의어 사전" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-IMg6CIiZqRE/XfoBAdEX3II/AAAAAAAAHio/nskF0RrsziM_SusURWwMmhE3GZNxxMoJACLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5">
-          <img src="img/features/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-Rjn_3FkFpgk/XfoBAunkqII/AAAAAAAAHiw/2JpADYz4D3U_CdohIAP07fItsQKiDlRHACLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
@@ -217,7 +217,7 @@
           </div>
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0">
-          <img src="img/features/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-M80oB5SMArU/XfoBBEZfHqI/AAAAAAAAHi0/_ZJEiHcevF4k5lxSy0ZdVfqutqejsAtagCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
         </div>
       </div>
     </div>
