--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             src="https://1.bp.blogspot.com/-KeEm-wqczWY/Xe3whZncOAI/AAAAAAAAHcg/SEhlY3cHblcSgKc4BS_PwsiXNW49O3mxACLcBGAsYHQ/s1600/1.gif"
             alt="patent search">
 
-          <div id="download-button" style="display: none">
+          <div id="store-button1" style="display: none">
             <a href="ms-windows-store://pdp/?productid=9N798V33QDF8">
               <img class="img-fluid mt-4" width="200px" src="img/store.png" alt="다운로드 버튼"></a>
           </div>
@@ -367,7 +367,7 @@
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
-          <div id="store-button" class="row" data-aos="fade-up" data-aos-duration="500">
+          <div id="store-button2" class="row" data-aos="fade-up" data-aos-duration="500">
             <a class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
                 class="img-fluid" width="100%" src="img/store.png" alt="다운로드 버튼"></a>
           </div>
