--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
           <div id="share-button" style="display: none">
             <a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span>기억해 두기</span></a>
-            <p><b>윈도우10 전용</b></p>
+            <p class="mt-3"><b>윈도우10 전용</b></p>
             <p>다음에 사용해 보세요..</p>
           </div>
         </div>
