--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1">
-          <img src="https://1.bp.blogspot.com/-QainkvNFTfE/XfoBAvqRJqI/AAAAAAAAHis/xHuiwSl-l3Y2Pd4y0KeI6EAXIzGHW1jqgCLcBGAsYHQ/s1600/1.gif" alt="특허 검색 화면" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
           <h2><span class="divider-v">|</span> 직관성</h2>
