--- a/index.html
+++ b/index.html
@@ -72,14 +72,11 @@
   <!-- End Facebook Pixel Code -->
 
   <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <!--<link rel="stylesheet" href="css/grt-youtube-popup.min.css">-->
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <link href="css/native-toast.min.css" rel="stylesheet">
-  <link href="css/freezeframe_styles.min" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -438,13 +435,14 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <!--<script src="js/grt-youtube-popup.min.js"></script>-->
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-  <script src="js/jquery.popupimg.min.js"></script>
+  <!--<script src="js/jquery.popupimg.min.js"></script>-->
   <script src="js/native-toast.min.js"></script>
 
   <!-- Custom scripts for this template -->
