--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!--<link rel="stylesheet" href="css/grt-youtube-popup.min.css">-->
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <!--<link rel="stylesheet" href="css/aos.css">-->
+  <link rel="stylesheet" href="css/aos.css">
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <link href="css/native-toast.min.css" rel="stylesheet">
 
@@ -169,9 +169,7 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1">
-          <img
-            src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif"
-            alt="특허 검색식 생성" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
           <h2><span class="divider-v">|</span> 직관성</h2>
@@ -191,15 +189,11 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4">
-          <img
-            src="https://1.bp.blogspot.com/-meutdfFBBw0/XfoEK7jUduI/AAAAAAAAHjg/6obmkhE2iDkl3IOpFbron68ackvVV0HuwCLcBGAsYHQ/s1600/2.gif"
-            alt="특허 동의어 사전" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-meutdfFBBw0/XfoEK7jUduI/AAAAAAAAHjg/6obmkhE2iDkl3IOpFbron68ackvVV0HuwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5">
-          <img
-            src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif"
-            alt="특허 검색 사이트 변환" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
@@ -219,9 +213,7 @@
           </div>
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0">
-          <img
-            src="https://1.bp.blogspot.com/-icV2r595vSM/XfoEK0h-YLI/AAAAAAAAHjY/7uiYKZPFtrMgQXqSmuu6ktH4nuiW041ZwCLcBGAsYHQ/s1600/4.gif"
-            alt="특허 검색식 검색기록" style="width: 100%;">
+          <img src="https://1.bp.blogspot.com/-icV2r595vSM/XfoEK0h-YLI/AAAAAAAAHjY/7uiYKZPFtrMgQXqSmuu6ktH4nuiW041ZwCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
         </div>
       </div>
     </div>
@@ -229,7 +221,7 @@
 
   <!-- Blog Section -->
   <section class="py-5 bg-light mt-0" id="blog">
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-duration="800">
       <h2 class="text-center mt-0">블로그</h2>
       <hr class="divider my-4 pb-2">
       <div class="row no-gutters">
@@ -358,7 +350,7 @@
   <!-- Install Section -->
   <section id="install">
     <div class="container-fluid page-section bg-white">
-      <div class="row no-gutters">
+      <div class="row no-gutters" data-aos="fade-up" data-aos-duration="500">
         <div class="col-lg-6 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
@@ -367,14 +359,14 @@
           </div>
         </div>
         <div class="col-lg-6 px-3 px-lg-4 order-1 order-lg-2">
-          <h2 class="py-3" n="500"><span class="divider-v">|</span> <span>설치</span></h2>
+          <h2 class="py-3" n="500" data-aos-delay="100"><span class="divider-v">|</span> <span>설치</span></h2>
           <p id="win10_warn" style="display: none;">
             <b1>윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.</b1>
           </p>
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
-          <div id="store-button2" class="row">
+          <div id="store-button2" class="row" data-aos="fade-up" data-aos-duration="500">
             <a class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
                 class="img-fluid" width="100%" src="img/store.png" alt="다운로드 버튼"></a>
           </div>
@@ -389,12 +381,12 @@
   <section class="img" id="contact">
     <div class="container bg-white px-md-0">
       <div class="row d-flex">
-        <div class="col-md-6 col-lg-5 d-flex">
+        <div class="col-md-6 col-lg-5 d-flex" data-aos="fade-up" data-aos-duration="800">
           <div class="img d-flex align-self-stretch align-items-center"
             style="background-image:url(https://1.bp.blogspot.com/-zXFa98qyVS0/XdKDcLE2z6I/AAAAAAAAHL4/a5fSOJ6xp4srn-QkSIKxyYZXDsjZIvhsACLcBGAsYHQ/s1600/contact.jpg);">
           </div>
         </div>
-        <div class="col-md-6 col-lg-7 pl-lg-5">
+        <div class="col-md-6 col-lg-7 pl-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
           <div class="pt-5 px-2">
             <div class="row justify-content-start pb-3">
               <div class="col-lg-8">
@@ -448,12 +440,10 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <!--<script src="js/grt-youtube-popup.min.js"></script>-->
   <script src="js/owl.carousel.min.js"></script>
-  <!--<script src="js/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>-->
+  <script src="js/aos.js"></script>
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
-  <!--<script src="js/jquery.popupimg.min.js"></script>-->
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <script src="js/jquery.popupimg.min.js"></script>
   <script src="js/native-toast.min.js"></script>
 
   <!-- Custom scripts for this template -->
