--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   <!-- Install Section -->
   <section id="install">
     <div class="container-fluid page-section bg-white">
-      <div class="row no-gutters" data-aos="fade-up" data-aos-duration="500">
+      <div class="row no-gutters py-3 py-md-0" data-aos="fade-up" data-aos-duration="500">
         <div class="col-lg-6 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
@@ -441,6 +441,9 @@
   <!--<script src="js/grt-youtube-popup.min.js"></script>-->
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.popupimg.min.js"></script>
