--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1">
-          <img src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
+          <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
           <h2><span class="divider-v">|</span> 직관성</h2>
@@ -191,11 +191,11 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4">
-          <img src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
+          <img class="shadow-right" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5">
-          <img src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
+          <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0">
-          <img src="https://1.bp.blogspot.com/-icV2r595vSM/XfoEK0h-YLI/AAAAAAAAHjY/7uiYKZPFtrMgQXqSmuu6ktH4nuiW041ZwCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
+          <img class="shadow-right" src="https://1.bp.blogspot.com/-icV2r595vSM/XfoEK0h-YLI/AAAAAAAAHjY/7uiYKZPFtrMgQXqSmuu6ktH4nuiW041ZwCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
         </div>
       </div>
     </div>
