--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up" data-aos-duration="1000">
           <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up" data-aos-duration="1000">
           <h2><span class="divider-v">|</span> 직관성</h2>
           <div class="d-none d-md-block">
             <p>모든 단어를 태그처리</p>
@@ -182,7 +182,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right" data-aos="fade-up" data-aos-duration="1000">
           <h2>동의어 사전 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>추가된 단어 자동저장</p>
@@ -197,7 +197,7 @@
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up" data-aos-duration="1000">
           <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up" data-aos-duration="1000">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
           <div class="d-none d-md-block">
             <p>키프리스, Google Patents,</p>
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right" data-aos="fade-up" data-aos-duration="1000">
           <h2>검색기록 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>검색식이 자동 저장</p>
