aos-duration 제거

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
   <section id="features">
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
-        <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
           <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up">
           <h2><span class="divider-v">|</span> 직관성</h2>
           <div class="d-none d-md-block">
             <p>모든 단어를 태그처리</p>
@@ -182,7 +182,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right" data-aos="fade-up">
           <h2>동의어 사전 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>추가된 단어 자동저장</p>
@@ -190,14 +190,14 @@
             <p>브라우저 제공</p>
           </div>
         </div>
-        <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up">
           <img class="shadow-right" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
         </div>
 
-        <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up">
           <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up">
           <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
           <div class="d-none d-md-block">
             <p>키프리스, Google Patents,</p>
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right" data-aos="fade-up">
           <h2>검색기록 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>검색식이 자동 저장</p>
@@ -214,7 +214,7 @@
             <p>복구기능 지원</p>
           </div>
         </div>
-        <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up">
           <img class="shadow-right" src="https://1.bp.blogspot.com/-icV2r595vSM/XfoEK0h-YLI/AAAAAAAAHjY/7uiYKZPFtrMgQXqSmuu6ktH4nuiW041ZwCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
         </div>
       </div>
@@ -223,7 +223,7 @@
 
   <!-- Blog Section -->
   <section class="py-5 bg-light mt-0" id="blog">
-    <div class="container" data-aos="fade-up" data-aos-duration="800">
+    <div class="container" data-aos="fade-up">
       <h2 class="text-center mt-0">블로그</h2>
       <hr class="divider my-4 pb-2">
       <div class="row no-gutters">
@@ -352,7 +352,7 @@
   <!-- Install Section -->
   <section id="install">
     <div class="container-fluid page-section bg-white">
-      <div class="row no-gutters py-3 py-md-0" data-aos="fade-up" data-aos-duration="500">
+      <div class="row no-gutters py-3 py-md-0" data-aos="fade-up">
         <div class="col-lg-6 order-2 order-lg-1">
           <div class="video-container">
             <iframe id="install-video" width="560" height="315" src="https://www.youtube.com/embed/6GLS2SxLgqI?rel=0"
@@ -368,7 +368,7 @@
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
-          <div id="store-button2" class="row" data-aos="fade-up" data-aos-duration="500">
+          <div id="store-button2" class="row" data-aos="fade-up">
             <a class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
                 class="img-fluid" width="100%" src="img/store.png" alt="다운로드 버튼"></a>
           </div>
@@ -383,12 +383,12 @@
   <section class="img" id="contact">
     <div class="container bg-white px-md-0">
       <div class="row d-flex">
-        <div class="col-md-6 col-lg-5 d-flex" data-aos="fade-up" data-aos-duration="800">
+        <div class="col-md-6 col-lg-5 d-flex" data-aos="fade-up">
           <div class="img d-flex align-self-stretch align-items-center"
             style="background-image:url(https://1.bp.blogspot.com/-zXFa98qyVS0/XdKDcLE2z6I/AAAAAAAAHL4/a5fSOJ6xp4srn-QkSIKxyYZXDsjZIvhsACLcBGAsYHQ/s1600/contact.jpg);">
           </div>
         </div>
-        <div class="col-md-6 col-lg-7 pl-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
+        <div class="col-md-6 col-lg-7 pl-lg-5" data-aos="fade-up">
           <div class="pt-5 px-2">
             <div class="row justify-content-start pb-3">
               <div class="col-lg-8">
