--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           <p id="win10_warn" style="display: none;">
             <b1>윈도우10 전용 프로그램입니다. 윈도우10에서 스토어 버튼이 나타납니다.</b1>
           </p>
-          <p><b>마이크로소프트 스토어</b>를 통해 안전하게 설치됩니다.</p>
+          <p><b>마이크로소프트 스토어</b>를 통해 <b1>안전하게</b1> 설치됩니다.</p>
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
