--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!-- End Facebook Pixel Code -->
 
   <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <!--<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">-->
   <!--<link rel="stylesheet" href="css/grt-youtube-popup.min.css">-->
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -440,7 +440,7 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!--<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>-->
   <!--<script src="js/grt-youtube-popup.min.js"></script>-->
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/aos.js"></script>
@@ -448,7 +448,7 @@
     AOS.init();
   </script>
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
-  <script src="js/jquery.popupimg.min.js"></script>
+  <!--<script src="js/jquery.popupimg.min.js"></script>-->
   <script src="js/native-toast.min.js"></script>
 
   <!-- Custom scripts for this template -->
