다운로드 버튼 한글로 교체

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
           <div id="store-button1" style="display: none">
             <a href="ms-windows-store://pdp/?productid=9N798V33QDF8">
-              <img class="img-fluid mt-4" width="200px" src="img/store.png" alt="다운로드 버튼"></a>
+              <img class="img-fluid mt-4" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
           </div>
 
           <div id="share-button" style="display: none">
