md에서 배경화면 잘 보이게 조절

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">CCPatents</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -129,8 +129,8 @@
   <header class="masthead">
     <div class="container-fluid h-100 px-0">
       <div class="row no-gutters h-100 align-items-center justify-content-center text-center align-self-baseline">
-        <div class="col-12">
-          <img class="d-none d-md-block img-center mb-4 px-0" src="img/icon2.png" style="width: 65px;" />
+        <div class="col-12 pt-md-5 mt-md-5 pt-lg-0 mt-lg-0">
+          <img class="d-none d-lg-block img-center mb-4 px-0" src="img/icon2.png" style="width: 65px;" />
           <h1 class="text-uppercase text-white font-weight-bold mb-4">Click Cl!ck Patents</h1>
           <h2 class="mb-4">‘‘특허 검색이 쉬워졌습니다.’’</h2>
           <img class="popup-img d-md-none" style="cursor: pointer;" width="100%"
@@ -139,7 +139,11 @@
 
           <div id="store-button1" style="display: none">
             <a href="ms-windows-store://pdp/?productid=9N798V33QDF8">
-              <img class="img-fluid mt-4" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
+              <img class="img-fluid mt-4 mb-3" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
+          </div>
+          <div id="win_10_ads" style="display: none;">
+            <p>마이크로소프트 스토어에서 안전하고 빠르게,</p>
+            <p>마이크로소프트 계정 필요 없습니다.<div class=""></div></p>
           </div>
 
           <div id="share-button" style="display: none">
