--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
           </div>
           <div id="win_10_ads" style="display: none;">
             <p>마이크로소프트 스토어에서 안전하고 빠르게,</p>
-            <p>마이크로소프트 계정 필요 없습니다.<div class=""></div></p>
+            <p>마이크로소프트 계정 <b>필요 없습니다.</b><div class=""></div></p>
           </div>
 
           <div id="share-button" style="display: none">
             <a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>
-            <p class="mt-3"><b>윈도우10 전용</b></p>
+            <p class="mt-3"><bw>윈도우10 전용</bw></p>
             <p>다음에 사용해 보세요..</p>
           </div>
         </div>
