--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <img class="img-fluid mt-4 mb-3" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
           </div>
           <div id="win_10_ads" style="display: none;">
-            <p>마이크로소프트 스토어에서 안전하고 빠르게</p>
+            <p>마이크로소프트 스토어에서 안전하고 빠르게,</p>
           </div>
 
           <div id="share-button" style="display: none">
