--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             src="https://1.bp.blogspot.com/-9keO9Ee4WhM/Xe2w0Vh0qFI/AAAAAAAAHbg/40m8uXFgXaobaRAXjxVaAbhn1-Z-CJugwCLcBGAsYHQ/s1600/1.gif"
             alt="patent search">
 
-          <div id="store-button1" style="display: none">
-            <a href="ms-windows-store://pdp/?productid=9N798V33QDF8">
+          <div id="store-area1" style="display: none">
+            <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8">
               <img class="img-fluid mt-4 mb-3" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
           </div>
           <div id="win_10_ads" style="display: none;">
@@ -372,8 +372,8 @@
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
-          <div id="store-button2" class="row" data-aos="fade-up">
-            <a class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
+          <div id="store-area2" class="row" data-aos="fade-up">
+            <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
                 class="img-fluid" width="100%" src="img/store_ko2.png" alt="다운로드 버튼"></a>
           </div>
 
