마우스 hover시 안내메시지

--- a/index.html
+++ b/index.html
@@ -137,9 +137,15 @@
             src="https://1.bp.blogspot.com/-9keO9Ee4WhM/Xe2w0Vh0qFI/AAAAAAAAHbg/40m8uXFgXaobaRAXjxVaAbhn1-Z-CJugwCLcBGAsYHQ/s1600/1.gif"
             alt="patent search">
 
-          <div id="store-area1" style="display: none">
-            <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8">
-              <img class="img-fluid mt-4 mb-3" width="200px" src="img/store_ko.png" alt="다운로드 버튼"></a>
+          <div id="store-area1" class="mt-4 mb-3" style="display: none">
+            <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
+              <div class="img-hover-container" style="width: 200px;">
+                <img src="img/store_ko.png" alt="다운로드 버튼" class="img-hover-image">
+                <div class="img-hover-overlay">
+                  <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시</div>
+                </div>
+              </div>
+            </a>
           </div>
           <div id="win_10_ads" style="display: none;">
             <p>마이크로소프트 스토어에서 안전하고 빠르게,</p>
