--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <div class="img-hover-container" style="width: 200px;">
                 <img src="img/store_ko.png" alt="다운로드 버튼" class="img-hover-image">
                 <div class="img-hover-overlay">
-                  <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시~</div>
+                  <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시</div>
                 </div>
               </div>
             </a>
