--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up">
-          <h2><span class="divider-v">|</span> 직관성</h2>
+          <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 직관성</h2>
           <div class="d-none d-md-block">
             <p>모든 단어를 태그처리</p>
             <p>키워드별 필드 선택</p>
@@ -192,7 +192,7 @@
         </div>
 
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-3 text-right" data-aos="fade-up">
-          <h2>동의어 사전 <span class="divider-v">|</span></h2>
+          <h2 class="px-3 px-md-0">동의어 사전 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>추가된 단어 자동저장</p>
             <p>다음 검색에 자동반영</p>
@@ -207,7 +207,7 @@
           <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up">
-          <h2><span class="divider-v">|</span> 플랫폼간 전환</h2>
+          <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 플랫폼간 전환</h2>
           <div class="d-none d-md-block">
             <p>키프리스, Google Patents,</p>
             <p>USPTO, Espacenet, J-PlatPat</p>
@@ -216,7 +216,7 @@
         </div>
 
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right" data-aos="fade-up">
-          <h2>검색기록 <span class="divider-v">|</span></h2>
+          <h2 class="px-3 px-md-0">검색기록 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
             <p>검색식이 자동 저장</p>
             <p>겸색식마다 메모 및 평가 가능</p>
