--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div class="row justify-content-start pb-3">
               <div class="col-lg-8">
                 <h2 class="pb-3"><span class="divider-v">|</span> <span>문의</span></h2>
-                <p>추가하고 싶은 기능이 있거나,<br>버그 발견시 언제든지 문의해 주세요.</p>
+                <p>사용법을 자세히 알고 싶거나,<br>버그 발견시 언제든지 문의해 주세요.</p>
                 <div class="contact-info">
                   <form action="https://script.google.com/macros/s/AKfycbw15FE1tciA0ToUN5xdQzkcj_SgoGam44xIMaZ82A/exec"
                     method="POST" class="pt-2 w-100 gform pure-form pure-form-stacked">
