--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div id="store-area1" class="mt-4 mb-3" style="display: none">
             <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
               <div class="img-hover-container" style="width: 200px;">
-                <img src="img/store_ko.png" alt="다운로드 버튼" class="img-hover-image">
+                <img src="https://1.bp.blogspot.com/-OcTM0sQ-P3Q/Xf2BfsK5A0I/AAAAAAAAHl8/n0jqczizugQFFxLyr6VmVPC_qHaIzml9gCLcBGAsYHQ/s1600/store_ko.png" alt="다운로드 버튼" class="img-hover-image">
                 <div class="img-hover-overlay">
                   <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시</div>
                 </div>
@@ -357,7 +357,7 @@
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="fade-up">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
-                class="img-fluid" width="100%" src="img/store_ko2.png" alt="다운로드 버튼"></a>
+                class="img-fluid" width="100%" src="https://1.bp.blogspot.com/-0rhURw5cj9s/Xf2BfUsqYEI/AAAAAAAAHl4/tfGMocdsrWQ1aMD6u_nQaRS2BqmbCQA9gCLcBGAsYHQ/s1600/store_ko2.png" alt="다운로드 버튼"></a>
           </div>
 
 
