--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a class="nav-link js-scroll-trigger" href="#blog">블로그</a>
           </li>
           <li class="nav-item">
-            <a id="download" class="nav-link js-scroll-trigger download" href="#install">설치</a>
+            <a id="download" class="nav-link js-scroll-trigger" href="#install"><span class="download">설치</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">문의</a>
