--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-7 text-right" data-aos="fade-up">
           <h2 class="px-3 px-md-0">검색기록 <span class="divider-v">|</span></h2>
           <div class="d-none d-md-block">
-            <p>검색식이 자동 저장</p>
+            <p>검색식 자동 저장</p>
             <p>겸색식마다 메모 및 평가 가능</p>
             <p>복구기능 지원</p>
           </div>
