--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
-          <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
+          <div class="video-container shadow-left">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nfxZFbneouw?mute=1&controls=0&autoplay=1&loop=1&&playlist=nfxZFbneouw" frameborder="0"
+              allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up">
           <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 직관성</h2>
@@ -181,11 +184,17 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up">
-          <img class="shadow-right" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어 사전" style="width: 100%;">
+          <div class="video-container shadow-left">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VJBgmtyljHM?mute=1&controls=0&autoplay=1&loop=1&&playlist=VJBgmtyljHM" frameborder="0"
+              allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up">
-          <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
+          <div class="video-container shadow-left">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cQeoTjiTTSU?mute=1&controls=0&autoplay=1&loop=1&&playlist=cQeoTjiTTSU" frameborder="0"
+              allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up">
           <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 플랫폼간 전환</h2>
@@ -205,7 +214,10 @@
           </div>
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up">
-          <img class="shadow-right" src="https://1.bp.blogspot.com/-1bkGb_n0e9A/XfsG0Mv3LPI/AAAAAAAAHkM/DZ1o5KiNlcgMQLJYZvW5ivky64UKj7JxwCLcBGAsYHQ/s1600/4.gif" alt="특허 검색식 검색기록" style="width: 100%;">
+          <div class="video-container shadow-left">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Muy-XVGe5cA?mute=1&controls=0&autoplay=1&loop=1&&playlist=XVGe5cA" frameborder="0"
+              allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </div>
