--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up">
           <div class="video-container shadow-left">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Muy-XVGe5cA?mute=1&controls=0&autoplay=1&loop=1&&playlist=XVGe5cA" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Muy-XVGe5cA?mute=1&controls=0&autoplay=1&loop=1&&playlist=Muy-XVGe5cA" frameborder="0"
               allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
