--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
           <div class="video-container shadow-left">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/J_NPGxbwh00?mute=1&controls=0&autoplay=1&loop=1&&playlist=J_NPGxbwh00" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/J_NPGxbwh00?mute=1" frameborder="0"
               allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
@@ -181,14 +181,14 @@
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up">
           <div class="video-container shadow-left">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QKIPyklOYwk?mute=1&controls=0&autoplay=1&loop=1&&playlist=QKIPyklOYwk" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/QKIPyklOYwk?mute=1" frameborder="0"
               allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up">
           <div class="video-container shadow-left">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/o0gyeij1BEA?mute=1&controls=0&autoplay=1&loop=1&&playlist=o0gyeij1BEA" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o0gyeij1BEA?mute=1" frameborder="0"
               allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
@@ -211,7 +211,7 @@
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up">
           <div class="video-container shadow-left">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/m0OeNveufsc?mute=1&controls=0&autoplay=1&loop=1&&playlist=m0OeNveufsc" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/m0OeNveufsc?mute=1" frameborder="0"
               allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
