--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
-          <img class="shadow-right" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
+          <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up">
           <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 직관성</h2>
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up">
-          <img class="shadow-left" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어" style="width: 100%;">
+          <img class="shadow-right" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up">
