--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <meta name="naver-site-verification" content="6bc58c2f3e8161fe8df6acec8c1529ccff8c7495" />
 
   <!-- Font Awesome Icons -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <!--<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
 
   <!-- Google Fonts -->
   <link
@@ -126,7 +127,8 @@
           </div>
 
           <div id="share-button" style="display: none">
-            <a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>
+            <!--<a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>-->
+            <div id="socials" class="da-share-html da-fb da-tw"></div>
             <p class="mt-3"><bw>윈도우10 전용</bw></p>
             <p>다음에 사용해 보세요..</p>
           </div>
@@ -423,8 +425,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>-->
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
@@ -438,9 +440,11 @@
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
   <!--<script src="js/jquery.popupimg.min.js"></script>-->
   <script src="js/native-toast.min.js"></script>
+  <script src="js/jquery.da-share.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>
+  <!--<script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>-->
+  <script src="js/creative.js"></script>
 
 </body>
 
