--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </div>
     </div>
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <video id="bg_video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source src="http://video_ko.ccpatents.net/bg.mp4" type="video/mp4">
     </video>
   </header>
