--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!--<a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>-->
             <!--<div id="socials" class="da-share-html da-fb da-tw"></div>-->
             <a id="kakao-link-btn" href="javascript:;">
-              <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" /> </a>
+              <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width="50px" /> </a>
             <p class="mt-3">
               <bw>윈도우10 전용</bw>
             </p>
