--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link href="css/native-toast.min.css" rel="stylesheet">
+  <!--<link href="css/native-toast.min.css" rel="stylesheet">-->
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -454,9 +454,9 @@
   <script>
     AOS.init();
   </script>
-  <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
+  <!--<script data-cfasync="false" src="js/form-submission-handler.min.js"></script>-->
   <!--<script src="js/jquery.popupimg.min.js"></script>-->
-  <script src="js/native-toast.min.js"></script>
+  <!--<script src="js/native-toast.min.js"></script>-->
   <!--<script src="js/jquery.da-share.min.js"></script>-->
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 
