--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <a class="nav-link js-scroll-trigger" href="#whyhow">특허 검색은 왜? 그리고 어떻게?</a>
           </li>-->
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#mechanism">작동방식</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">다양한 기능</a>
           </li>
           <!--<li class="nav-item">
@@ -163,9 +166,21 @@
     </div>
   </section>
 
+  <!--Mechanism Section-->
+  <section id="mechanism">
+    <div class="container-fluid py-5">
+      <div class="row d-flex align-items-center justify-content-center px-3">
+        
+        <img class="col-12 col-lg-10 col-xl-9"
+            src="./img/mech.png"
+            alt="특허 검색 방법" style="width: 100%;">
+      </div>
+    </div>
+  </section>
+
   <!-- Features Section -->
-  <section id="features">
-    <div class="container bg-white my-5">
+  <section id="features" class="bg-light">
+    <div class="container py-4 bg-light">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
           <img class="shadow-left"
