--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <h1 class="text-uppercase text-white font-weight-bold mb-4">Click Cl!ck Patents</h1>
           <h2 class="mb-4">‘‘특허 검색식 완성 도우미’’</h2>
           <div id="store-area1" class="mt-4 mb-3" style="display: none">
-            <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
+            <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;" data-aos="zoom-in">
               <div class="img-hover-container" style="width: 200px;">
                 <img
                   src="https://1.bp.blogspot.com/-OcTM0sQ-P3Q/Xf2BfsK5A0I/AAAAAAAAHl8/n0jqczizugQFFxLyr6VmVPC_qHaIzml9gCLcBGAsYHQ/s1600/store_ko.png"
@@ -152,7 +152,7 @@
 
   <!--Why Section-->
   <section id="why">
-    <div class="container-fluid py-5 bg-light">
+    <div class="container-fluid py-5 bg-light" data-aos="fade-up">
       <div class="row d-flex align-items-center justify-content-center px-3">
         <div class="text-center">
           <h2>‘‘괄호와 연산자를 신경쓸 필요가 없습니다.’’</h2>
@@ -168,7 +168,7 @@
 
   <!--Mechanism Section-->
   <section id="mechanism">
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" data-aos="zoom-in">
       <div class="row d-flex align-items-center justify-content-center px-3">
         
         <img class="col-12 col-lg-10 col-xl-9"
@@ -389,7 +389,7 @@
           <p><b>마이크로소프트 계정이 없어도</b> 설치할 수 있습니다.</p>
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
-          <div id="store-area2" class="row" data-aos="fade-up">
+          <div id="store-area2" class="row" data-aos="zoom-in">
             <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
               href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img class="img-fluid" width="100%"
                 src="https://1.bp.blogspot.com/-0rhURw5cj9s/Xf2BfUsqYEI/AAAAAAAAHl4/tfGMocdsrWQ1aMD6u_nQaRS2BqmbCQA9gCLcBGAsYHQ/s1600/store_ko2.png"
