--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 
   <!--Mechanism Section-->
   <section id="mechanism">
-    <div class="container-fluid py-5" data-aos="zoom-in">
-      <div class="row d-flex align-items-center justify-content-center px-3">
+    <div class="container-fluid py-5 px-0" data-aos="zoom-in">
+      <div class="row d-flex align-items-center justify-content-center px-0">
         
-        <img class="col-12 col-lg-10 col-xl-9"
+        <img class="col-12 col-lg-10 col-xl-9 px-0"
             src="./img/mech.png"
-            alt="특허 검색 방법" style="width: 100%;">
+            alt="특허 검색 방법">
       </div>
     </div>
   </section>
