--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="row d-flex align-items-center justify-content-center px-0">
         
         <img class="col-12 col-lg-10 col-xl-9 px-0"
-            src="./img/mech.png"
+            src="./img/mechanism.png"
             alt="특허 검색 방법">
       </div>
     </div>
