--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             <div class="item">
               <img src="./img/mechanism/5.png" alt="patent search">
             </div>
+            <div class="item">
+              <img src="./img/mechanism/6.png" alt="patent search">
+            </div>
           </div>  
         </div>
         
@@ -498,7 +501,7 @@
 
   <!-- Custom scripts for this template -->
   <!--<script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>-->
-  <script src="js/creative.js"></script>
+  <script src="js/creative.min.js"></script>
 
 </body>
 
